--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-pretty-code": "^0.14.1",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
