--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-code-titles": "^1.2.0",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
