feat(setup): Update Prettier configuration for import sorting
$: `npm install -D @trivago/prettier-plugin-sort-imports` for sorting imports

- Set the basic `importOrder` option for react&next project

--- a/.prettierrc
+++ b/.prettierrc
@@ -14,5 +14,14 @@
         "parser": "typescript"
       }
     }
-  ]
+  ],
+  "importOrder": [
+    "^(react/(.*)$)|^(react$)",
+    "^(next/(.*)$)|^(next$)",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^[@/]",
+    "^[./]"
+  ],
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
