--- a/.prettierrc
+++ b/.prettierrc
@@ -23,5 +23,8 @@
     "^[@/]",
     "^[./]"
   ],
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
