--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "feed": "^4.2.2",
     "glob": "^11.0.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.483.0",
