--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
