--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "shiki": "^3.2.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "zustand": "^5.0.3"
