--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@supabase/supabase-js": "^2.49.3",
     "@types/glob": "^8.1.0",
     "@vercel/analytics": "^1.5.0",
