--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
+    "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
